javacc/src/main/java/com/zhaoyunfei/javacc/module/parser/ActionParser.java
package com.zhaoyunfei.javacc.module.parser;/* Generated By:JavaCC: Do not edit this line. ActionParser.java */

import com.zhaoyunfei.javacc.module.dto.ARCActionDto;
import com.zhaoyunfei.javacc.module.dto.CircleActionDto;
import com.zhaoyunfei.javacc.module.dto.LineActionDto;
import com.zhaoyunfei.javacc.module.dto.PTPActionDto;
import com.zhaoyunfei.javacc.module.service.IExecuteService;
import lombok.extern.slf4j.Slf4j;

import java.util.HashMap;
import java.util.Map;

@Slf4j
public class ActionParser implements ActionParserConstants {
    // 业务接口
    private IExecuteService iExecuteService;

    private boolean breakLoop = false;

    private boolean continueLoop = false;

    // 存储变量�? Map
    private Map<String, Float> variables = new HashMap<String, Float>();

    private boolean executePtpAction(String parameters) {
        log.debug("Executing PTP action with parameters: " + parameters);
        // 分割参数
        String[] split = parameters.split(",");

        String param1 = split.length > 0 ? split[0] : "";

        float param2 = split.length > 1 ? Float.parseFloat(split[1]) : 0;

        float param3 = split.length > 2 ? Float.parseFloat(split[2]) : 0;

        int param4 = split.length > 3 ? Integer.parseInt(split[3]) : 0;

        float param5 = split.length > 4 ? Float.parseFloat(split[4]) : 0;

        float param6 = split.length > 5 ? Float.parseFloat(split[5]) : 0;

        float param7 = split.length > 6 ? Float.parseFloat(split[6]) : 0;

        float param8 = split.length > 7 ? Float.parseFloat(split[7]) : 0;

        float param9 = split.length > 8 ? Float.parseFloat(split[8]) : 0;

        float param10 = split.length > 9 ? Float.parseFloat(split[9]) : 0;

        PTPActionDto dto = new PTPActionDto(param1, param2, param3, param4, param5, param6, param7, param8, param9, param10);
        // 执行 PTP 动作
        return this.iExecuteService.executePtpAction(dto);
    }

    private boolean executeLinAction(String parameters) {
        log.debug("Executing LIN action with parameters: " + parameters);
        // 分割参数
        String[] split = parameters.split(",");

        String param1 = split.length > 0 ? split[0] : "";

        float param2 = split.length > 1 ? Float.parseFloat(split[1]) : 0;

        float param3 = split.length > 2 ? Float.parseFloat(split[2]) : 0;

        int param4 = split.length > 3 ? Integer.parseInt(split[3]) : 0;

        int param5 = split.length > 4 ? Integer.parseInt(split[4]) : 0;

        float param6 = split.length > 5 ? Float.parseFloat(split[5]) : 0;

        float param7 = split.length > 6 ? Float.parseFloat(split[6]) : 0;

        float param8 = split.length > 7 ? Float.parseFloat(split[7]) : 0;

        float param9 = split.length > 8 ? Float.parseFloat(split[8]) : 0;

        float param10 = split.length > 9 ? Float.parseFloat(split[9]) : 0;

        float param11 = split.length > 10 ? Float.parseFloat(split[10]) : 0;

        LineActionDto dto = new LineActionDto(param1, param2, param3, param4, param5, param6, param7, param8, param9, param10, param11);
        // 执行 LIN动作
        return this.iExecuteService.executeLinAction(dto);
    }

    private boolean executeArcAction(String parameters) {
        log.debug("Executing ARC action with parameters: " + parameters);
        // 分割参数
        String[] split = parameters.split(",");

        String param1 = split.length > 0 ? split[0] : "";

        String param2 = split.length > 1 ? split[1] : "";

        int param3 = split.length > 2 ? Integer.parseInt(split[2]) : 0;

        float param4 = split.length > 3 ? Float.parseFloat(split[3]) : 0;

        ARCActionDto dto = new ARCActionDto(param1, param2, param3, param4);
        // 执行 ARC 动作
        return this.iExecuteService.executeArcAction(dto);
    }

    private boolean executeCircleAction(String parameters) {
        log.debug("Executing CIRCLE action with parameters: " + parameters);
        // 根据规则分割参数
        String[] split = parameters.split(",");

        String param1 = split.length > 0 ? split[0] : "";

        String param2 = split.length > 1 ? split[1] : "";

        int param3 = split.length > 2 ? Integer.parseInt(split[2]) : 0;

        int param4 = split.length > 3 ? Integer.parseInt(split[3]) : 0;

        float param5 = split.length > 4 ? Float.parseFloat(split[4]) : 0;

        float param6 = split.length > 5 ? Float.parseFloat(split[5]) : 0;

        float param7 = split.length > 6 ? Float.parseFloat(split[6]) : 0;

        float param8 = split.length > 7 ? Float.parseFloat(split[7]) : 0;

        float param9 = split.length > 8 ? Float.parseFloat(split[8]) : 0;

        float param10 = split.length > 9 ? Float.parseFloat(split[9]) : 0;

        CircleActionDto dto = new CircleActionDto(param1, param2, param3, param4, param5, param6, param7, param8, param9, param10);
        // 执行 CIRCLE动作
        return this.iExecuteService.executeCircleAction(dto);
    }

    final public void start() throws ParseException {
        statement();
        label_1:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case IF:
                case FOR:
                case WHILE:
                case CONTINUE_END:
                case PTP:
                case LIN:
                case ARC:
                case CIRCLE:
                case IDENTIFIER:
                    ;
                    break;
                default:
                    jj_la1[0] = jj_gen;
                    break label_1;
            }
            statement();
        }
    }

    // 根据�?求将执行拆分为动作与条件
    final public void statement() throws ParseException {
        label_2:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case PTP:
                case LIN:
                case ARC:
                case CIRCLE:
                    actionStatement();
                    break;
                case IF:
                case FOR:
                case WHILE:
                case CONTINUE_END:
                case IDENTIFIER:
                    conditionalStatement();
                    break;
                default:
                    jj_la1[1] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case IF:
                case FOR:
                case WHILE:
                case CONTINUE_END:
                case PTP:
                case LIN:
                case ARC:
                case CIRCLE:
                case IDENTIFIER:
                    ;
                    break;
                default:
                    jj_la1[2] = jj_gen;
                    break label_2;
            }
        }
    }

    // 为了解析不执行动�?,但是文本还继续往后解析情�?
    final public void noExecStatement() throws ParseException {
        label_3:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case IF:
                case FOR:
                case WHILE:
                case BREAK:
                case CONTINUE:
                case CONTINUE_END:
                case PTP:
                case LIN:
                case ARC:
                case CIRCLE:
                case IDENTIFIER:
                    ;
                    break;
                default:
                    jj_la1[3] = jj_gen;
                    break label_3;
            }
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case PTP:
                case LIN:
                case ARC:
                case CIRCLE:
                    noExecActionStatement();
                    break;
                case IF:
                case FOR:
                case WHILE:
                case CONTINUE_END:
                case IDENTIFIER:
                    noExecConditionalStatement();
                    break;
                case BREAK:
                    noExecBreakStatement();
                    break;
                case CONTINUE:
                    noExecContinueStatement();
                    break;
                default:
                    jj_la1[4] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
        }
    }

    // 条件�?: if,for循环,变量声明
    final public void conditionalStatement() throws ParseException {
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case IF:
                ifStatement();
                break;
            case FOR:
            case WHILE:
                loopStatement();
                break;
            case IDENTIFIER:
                declaration();
                break;
            case CONTINUE_END:
                continueEnd();
                break;
            default:
                jj_la1[5] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
        }
    }

    final public void noExecConditionalStatement() throws ParseException {
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case IF:
                noExecIfStatement();
                break;
            case FOR:
            case WHILE:
                noExecLoopStatement();
                break;
            case IDENTIFIER:
                noExecDeclaration();
                break;
            case CONTINUE_END:
                continueEnd();
                break;
            default:
                jj_la1[6] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
        }
    }

    // 变量声明:这里主要是将变量存储在内存中,在需要使用时可以直接获取,实际调度解析比较的是�?
    final public void declaration() throws ParseException {
        Token varName, symbol, value1, value2;
        varName = jj_consume_token(IDENTIFIER);
        symbol = jj_consume_token(EQUALTO);
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case NUMBER:
                value1 = jj_consume_token(NUMBER);
                String name = varName.image;
                float val1 = Float.parseFloat(value1.image);
                variables.put(name, val1);
                break;
            case IDENTIFIER:
                value1 = jj_consume_token(IDENTIFIER);
                symbol = jj_consume_token(ADD);
                value2 = jj_consume_token(NUMBER);
                String variableName = varName.image;
                // 获取增加的�??
                float val = Float.parseFloat(value2.image);
                // 从变量集合中获取旧�??
                float oldValue = variables.getOrDefault(variableName, 0f);
                // 计算
                float result = val + oldValue;
                // 更新变量�?
                variables.put(variableName, result);
                break;
            default:
                jj_la1[7] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
        }
    }

    final public void noExecDeclaration() throws ParseException {
        jj_consume_token(IDENTIFIER);
        jj_consume_token(EQUALTO);
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case NUMBER:
                jj_consume_token(NUMBER);
                break;
            case IDENTIFIER:
                jj_consume_token(IDENTIFIER);
                jj_consume_token(ADD);
                jj_consume_token(NUMBER);
                break;
            default:
                jj_la1[8] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
        }
    }

    // if条件解析并执�?
    final public void ifStatement() throws ParseException {
        boolean conditionResult;
        if (breakLoop | continueLoop) {
            noExecStatement();
            {
                if (true) return;
            }
        }
        jj_consume_token(IF);
        conditionResult = condition();
        jj_consume_token(THEN);
        if (conditionResult) {
            ifConditionStatement();
            if (breakLoop) {
                noExecStatement();
            }
        } else {
            noExecStatement();
        }
        jj_consume_token(END);
    }

    final public void ifConditionStatement() throws ParseException {
        label_4:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case IF:
                case FOR:
                case WHILE:
                case BREAK:
                case CONTINUE:
                case CONTINUE_END:
                case PTP:
                case LIN:
                case ARC:
                case CIRCLE:
                case IDENTIFIER:
                    ;
                    break;
                default:
                    jj_la1[9] = jj_gen;
                    break label_4;
            }
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case IF:
                case FOR:
                case WHILE:
                case CONTINUE_END:
                case PTP:
                case LIN:
                case ARC:
                case CIRCLE:
                case IDENTIFIER:
                    statement();
                    break;
                case BREAK:
                    jj_consume_token(BREAK);
                    breakLoop = true;
                    break;
                case CONTINUE:
                    jj_consume_token(CONTINUE);
                    this.continueLoop = true;
                    break;
                default:
                    jj_la1[10] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
        }
    }

    final public void noExecIfStatement() throws ParseException {
        jj_consume_token(IF);
        noExecCondition();
        jj_consume_token(THEN);
        noExecStatement();
        jj_consume_token(END);
    }

    // for循环:解析的文本为 for i=0,2,1 do ...end 以及 for count=1,10 do ...end 循环执行10�?
    final public void loopStatement() throws ParseException {
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case FOR:
                forStatement();
                break;
            case WHILE:
                whileStatement();
                break;
            default:
                jj_la1[11] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
        }
    }

    final public void forStatement() throws ParseException {
        String identy = "";
        int start = 0;
        int end = 0;
        // 这里这个1不能�?,为了
        int increment = 1;
        // 用于保存当前 token 流的数组
        Token[] savedTokens = new Token[1];
        jj_consume_token(FOR);
        jj_consume_token(IDENTIFIER);
        identy = token.image;
        jj_consume_token(EQUALTO);
        jj_consume_token(NUMBER);
        start = Integer.parseInt(token.image);
        variables.put(identy, (float) start);
        jj_consume_token(COMMA);
        jj_consume_token(NUMBER);
        end = Integer.parseInt(token.image);
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case COMMA:
                jj_consume_token(COMMA);
                jj_consume_token(NUMBER);
                increment = Integer.parseInt(token.image);
                jj_consume_token(DO);
                savedTokens[0] = token;
                // �?查循环终止条�?
                while (start < end) {
                    // 还原 token 流到上一个循环迭代之前的状�??
                    token = savedTokens[0];
                    jj_ntk = -1;
                    // 执行循环�?
                    forConditionStatement();
                    // 更新循环变量
                    start += increment;
                    variables.put(identy, (float) start);
                    if (breakLoop) {
                        noExecStatement();
                        breakLoop = false;
                        break;
                    }
                    if (continueLoop) {
                        noExecStatement();
                        continueLoop = false;
                        continue;
                    }

                }
                break;
            case DO:
                jj_consume_token(DO);
                savedTokens[0] = token;
                // �?查循环终止条�?
                while (start <= end) {
                    // 还原 token 流到上一个循环迭代之前的状�??
                    token = savedTokens[0];
                    // 执行循环�?
                    jj_ntk = -1;
                    forConditionStatement();
                    // 更新循环变量
                    start += increment;
                    variables.put(identy, (float) start);

                    if (breakLoop) {
                        noExecStatement();
                        breakLoop = false;
                        break;
                    }
                    if (continueLoop) {
                        noExecStatement();
                        continueLoop = false;
                        continue;
                    }
                }
                break;
            default:
                jj_la1[12] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
        }
        jj_consume_token(END);
    }

    final public void whileStatement() throws ParseException {
        boolean conditionResult;
        Token[] savedTokens = new Token[1];
        jj_consume_token(WHILE);
        jj_consume_token(LPAREN);
        savedTokens[0] = token;
        // 保存当前解析位置
        conditionResult = condition();
        jj_consume_token(RPAREN);
        jj_consume_token(DO);
        while (conditionResult) {
            forConditionStatement();
            // 还原 token 流到上一个循环迭代之前的状�??
            token = savedTokens[0];
            jj_ntk = -1;
            conditionResult = condition(); // 重新解析条件
            jj_consume_token(RPAREN);
            jj_consume_token(DO);
            if (breakLoop) {
                noExecStatement();
                breakLoop = false;
                break;
            }
            if (continueLoop) {
                noExecStatement();
                continueLoop = false;
                continue;
            }
        }
        if (!conditionResult) {
            noExecStatement();
        }
        jj_consume_token(END);
    }

    final public void forConditionStatement() throws ParseException {
        label_5:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case IF:
                case FOR:
                case WHILE:
                case BREAK:
                case CONTINUE:
                case CONTINUE_END:
                case PTP:
                case LIN:
                case ARC:
                case CIRCLE:
                case IDENTIFIER:
                    ;
                    break;
                default:
                    jj_la1[13] = jj_gen;
                    break label_5;
            }
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case IF:
                case FOR:
                case WHILE:
                case CONTINUE_END:
                case PTP:
                case LIN:
                case ARC:
                case CIRCLE:
                case IDENTIFIER:
                    statement();
                    break;
                case BREAK:
                    jj_consume_token(BREAK);
                    this.breakLoop = true;
                    break;
                case CONTINUE:
                    jj_consume_token(CONTINUE);
                    this.continueLoop = true;
                    break;
                default:
                    jj_la1[14] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
        }
    }

    final public void noExecBreakStatement() throws ParseException {
        jj_consume_token(BREAK);
    }

    final public void noExecContinueStatement() throws ParseException {
        jj_consume_token(CONTINUE);
    }

    final public void continueEnd() throws ParseException {
        jj_consume_token(CONTINUE_END);
    }

    final public void noExecLoopStatement() throws ParseException {
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case FOR:
                jj_consume_token(FOR);
                jj_consume_token(IDENTIFIER);
                jj_consume_token(EQUALTO);
                jj_consume_token(NUMBER);
                jj_consume_token(COMMA);
                jj_consume_token(NUMBER);
                switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                    case COMMA:
                        jj_consume_token(COMMA);
                        jj_consume_token(NUMBER);
                        break;
                    default:
                        jj_la1[15] = jj_gen;
                        ;
                }
                jj_consume_token(DO);
                noExecStatement();
                jj_consume_token(END);
                break;
            case WHILE:
                jj_consume_token(WHILE);
                jj_consume_token(LPAREN);
                noExecCondition();
                jj_consume_token(RPAREN);
                jj_consume_token(DO);
                noExecStatement();
                jj_consume_token(END);
                break;
            default:
                jj_la1[16] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
        }
    }
